@@ -175,6 +175,7 @@ btonline-btechmux 0.6:
         * Added btech_idf_requies_spotter defaulting to 1 for
           idf Spotting requirements. (Power_Shaper)
 	* Ported Exile style orbital dropping. (Greg)
+	* Ported Exile's heatcutoff code. (Dany)
 
 	- Bugfixes
 	* Fixed mistiming in weapon recycling code. (Martin Murray)
@@ -238,6 +239,8 @@ btonline-btechmux 0.6:
 	  expected. (Fitz)
 	* Jumping mechs can no longer see or be seen on seismic 
           sensors. (Fitz)
+	* When a unit is in TSM mode it should get correct extra
+	  heat for the speed its currently at.
 
 btonline-btechmux 0.4:
 	- Changes
